--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -11,7 +11,7 @@ body {
 	cursor: grab;
 	user-select: none;
 	text-align: center;
-	font-family: Arial;
+	font-family: Arial, sans-serif;
 	font-size: 14px;
 }
 body:active {cursor: grabbing}
